<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Go Sailing</string>
    <string name="action_settings">Settings</string>

    <!-- Strings describing locations. -->
    <string-array name="direction_abbreviations">
        <item>N</item>
        <item>NNE</item>
        <item>NE</item>
        <item>ENE</item>
        <item>E</item>
        <item>ESE</item>
        <item>SE</item>
        <item>SSE</item>
        <item>S</item>
        <item>SSW</item>
        <item>SW</item>
        <item>WSW</item>
        <item>W</item>
        <item>WNW</item>
        <item>NW</item>
        <item>NNW</item>
    </string-array>

    <!-- Spoken strings. -->
    <string name="spoken_heading_format">%1$d degrees %2$s</string>
    <string name="spoken_heading_format_one">%1$d degree %2$s</string>
    <string name="place_text_format">%1$s (%2$s km)</string>
    <string-array name="spoken_directions">
        <item>north</item>
        <item>north north east</item>
        <item>north east</item>
        <item>east north east</item>
        <item>east</item>
        <item>east south east</item>
        <item>south east</item>
        <item>south south east</item>
        <item>south</item>
        <item>south south west</item>
        <item>south west</item>
        <item>west south west</item>
        <item>west</item>
        <item>west north west</item>
        <item>north west</item>
        <item>north north west</item>
    </string-array>


    <!-- Warning messages. -->
    <string name="pitch_too_steep">Keep Glass horizontal to use the compass</string>
    <string name="magnetic_interference">Glass is detecting too much interference</string>

    <!-- Menu item strings. -->
    <string name="read_aloud">Read aloud</string>
    <string name="stop">Stop</string>

    <!-- Value Strings. -->
    <string name="location">Location</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>

    <string name="altitude">Altitude</string>
    <string name="speed">Speed</string>
    <string name="orientation">Orientation</string>

    <!--  Voice Strings -->
    <string name="GO_SAILING">Go Sailing</string>
    <string name="latitude_label">Latitude:</string>
    <string name="longitude_label">Longitude:</string>
    <string name="bearing_label">Bearing:</string>
    <string name="speed_label">Speed:</string>
    <string name="temp_speed">10</string>
    <string name="speed_title">Speed</string>
    <string name="bearing_title">Bearing</string>
    <string name="temp_bearing">230</string>
</resources>