<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/latitudeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latitude_label"
            style="@style/textLabel" />

        <TextView
            android:id="@+id/longitudeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longitude_label"
            style="@style/textLabel" />

        <TextView
            android:id="@+id/bearingLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bearing_label"
            style="@style/textLabel" />
        <TextView
            android:id="@+id/speedLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speed_label"
            style="@style/textLabel" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/latitude"
            style="@style/textValue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/longitude"
            style="@style/textValue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bearing"
            style="@style/textValue" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/speed"
            android:text="SpeedKills"
            android:textSize="20sp"
/>
    </LinearLayout>
</LinearLayout>
