<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:useDefaultMargins="true"


    android:alignmentMode="alignBounds"

    android:columnOrderPreserved="false"
    android:rowOrderPreserved="false"
    android:columnCount="3"
    android:rowCount="6"

    android:background="@android:color/black"
    >
    <!-- Speed -->
<!--

  android:alignmentMode="alignMargins"
    android:columnCount="2"
    android:columnOrderPreserved="false"
    android:rowCount="6"
    android:rowOrderPreserved="true"
    android:background="@android:color/black"

-->

    <LinearLayout
        android:layout_row="0"
        android:layout_column="0"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="fill_parent"

            android:orientation="vertical">
            <TextView
                android:id="@+id/speed"
                style="@style/itemStyle"
                android:textSize="35sp"
                android:textStyle="bold"
                android:text="@string/temp_speed"/>

            <TextView
                style="@style/itemStyle"

                android:textSize="35sp"
                android:textColor="#aaa"
                android:textAllCaps="true"
                android:text="@string/speed_title"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="fill_parent"
            android:orientation="vertical">
            <!-- Bearing -->
            <TextView
                style="@style/itemStyle"

                android:textSize="35sp"
                android:textStyle="bold"
                android:id="@+id/bearing"
                android:text="@string/temp_bearing"/>

            <TextView
                style="@style/itemStyle"

                android:textSize="35sp"
                android:textColor="#aaa"
                android:textAllCaps="true"

                android:text="@string/bearing_title"/>

        </LinearLayout>
    </LinearLayout>

        <!-- Speed -->




      <LinearLayout
            android:layout_row="1"
            android:layout_column="0"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/latitudeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latitude_label"
                style="@style/textLabel" />

            <TextView
                android:id="@+id/longitudeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/longitude_label"
                style="@style/textLabel" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="20dp">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/latitude"

            style="@style/textValue" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/longitude"
            style="@style/textValue" />



            </LinearLayout>
</LinearLayout>
        </LinearLayout>

        <android.com.solutions.nerd.glass.CompassView
            android:id="@+id/compass"
            android:layout_width="match_parent"
            android:layout_height="90px"
            android:layout_column="0"
            android:layout_gravity="bottom"
            android:layout_row="4" />

        <RelativeLayout
            android:id="@+id/tips_container"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_column="0"
            android:layout_row="5"
            android:alpha="0"
            android:background="@drawable/gradient50" >

            <TextView
                android:id="@+id/tips_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/card_margin"
                android:ellipsize="end"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </RelativeLayout>
    </GridLayout>
